# dualentry-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  dualentry.spec  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
Formula/: dualentry.rb
scripts/: build.py  release.py
src/dualentry_cli/: __init__.py  _build_info.py  auth.py  cli.py  client.py  config.py  main.py  output.py  updater.py
src/dualentry_cli/commands/: __init__.py  accounts.py  bills.py  ije_extras.py  intercompany_journal_entries.py  invoices.py
tests/: test_auth.py  test_client.py  test_commands.py  test_config.py  test_integration.py  test_intercompany_journal_entries.py  test_output.py  test_updater.py
